# scraper_simple

./: .gitignore  Cargo.toml  README.md  architecture.md  myapp.sqlite3  myapp.sqlite3-shm  myapp.sqlite3-wal  notes.md  properties_debug.json  property_sample.json  realtor_debug.html  test.html  test.json  test_auth.sqlite
sql/: counties_by_state_alpha.sql  queries.sql  schema.sql  schema2.sql
src/: db.rs  errors.rs  mailer.rs  main.rs  router.rs  templates1.rs
src/auth/: magic.rs  mod.rs  sessions.rs  token.rs
src/db/: auth.rs  campaigns.rs  connection.rs  downloads.rs  listings.rs  magic_auth.rs  mailings.rs  mod.rs  plans.rs  properties.rs  scrapes.rs  users.rs
src/domain/: campaign.rs  changes.rs  listing.rs  logic.rs  mailing.rs  mod.rs  property.rs
src/geos/: geo_schema.sql  mod.rs  states.rs
src/mailings/: brevo.rs  campaign.rs  mailing.rs  mod.rs
src/responses/: errors.rs  html.rs  mod.rs  xlsx.rs
src/scraper/: mod.rs  models.rs  scraper.rs  scraper_error.rs
src/spreadsheets/: export_xlsx.rs  mailings_xlsx.rs  mod.rs
src/templates/: mod.rs
src/templates/components/: card.rs  email_cta.rs  error.rs  mod.rs
src/templates/layouts/: desktop.rs
src/templates/pages/: admin.rs  campaigns.rs  check_email.rs  dashboard.rs  home.rs  lists.rs  login.rs  mailings.rs  mod.rs  preview.rs
src/tests/: mod.rs  utils.rs
src/tests/router_tests/: admin_tests.rs  auth_flow_tests.rs  auth_tests.rs  dashboard_tests.rs  mod.rs
static/: main.css
