[package]
name = "scraper_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
astra = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
maud = "0.26"
rust_xlsxwriter = "0.39"
mime = "0.3"
time = "0.3"

# For parsing HTML
reqwest = { version = "0.11", features = ["blocking", "rustls"] }
scraper = "0.18"
serde_json = "1.0"

rand = "0.8"
