[package]
name = "scraper_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
astra = "0.4"
rusqlite = { version = "0.31", features = ["bundled", "chrono"]}
maud = "0.26"
# rust_xlsxwriter = "0.39"
rust_xlsxwriter = "0.92"
mime = "0.3"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }


# For parsing HTML
reqwest = { version = "0.11", features = ["blocking", "rustls", "json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"
base64 = "0.22"
url = "2.5.8"
sha2 = "0.10"

[dev-dependencies]
http = "1"
